--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </section >
       <section >
       <h2>Дополнительная информация</h2>
-      Работал и работаю инженером АСУ ТП , но планирую уйti в it.
+       уйti в it.
       </section >
       <!-- BEGIN (write your solution here) -->
       
