--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <main>
       <h1>Максим Кротких<h2>
-      <h2>Ученик,Сдудент,Аспирант</h2>
+      <h2>Максим Кротких</h2>
      <section> 
       <h2>Образование</h2>
       <ul>
